--- a/connor-buxton-guessing.ipynb
+++ b/connor-buxton-guessing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "id": "016d105b",
    "metadata": {},
    "outputs": [
@@ -31,17 +31,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['_', '_', '_', '_', '_', '_', '_', '_', '_', '_']\n"
+      "nonseverity\n"
      ]
     }
    ],
    "source": [
-    "picked_word = 'applesauce'\n",
+    "import random\n",
+    "f = open('words_alpha.txt','r')\n",
+    "x = 0\n",
+    "rand_num = random.randint(0, 370102)\n",
+    "while x <= rand_num:\n",
+    "    sample_line = f.readline()\n",
+    "    x = x + 1\n",
+    "\n",
+    "f.close()\n",
+    "\n",
+    "picked_word = sample_line.strip()\n",
     "guess_this_word = picked_word.lower()\n",
     "mystery_word = '_ '*len(guess_this_word)\n",
     "mystery_word = mystery_word.strip()\n",
     "mystery_list = mystery_word.split()\n",
-    "print(mystery_list)"
+    "print(guess_this_word)"
    ]
   },
   {
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 50,
    "id": "4a07a0c7",
    "metadata": {},
    "outputs": [],
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 51,
    "id": "1c6478c3",
    "metadata": {},
    "outputs": [],
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 52,
    "id": "e8da3d5c",
    "metadata": {},
    "outputs": [
@@ -126,26 +136,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['_', '_', '_', '_', '_', '_', '_', '_', '_', '_']\n",
-      "Enter guess: a\n",
+      "['_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_']\n",
+      "Enter guess: n\n",
       "You got a letter right!\n",
-      "['a', '_', '_', '_', '_', '_', 'a', '_', '_', '_']\n",
-      "Enter guess: p\n",
+      "['n', '_', 'n', '_', '_', '_', '_', '_', '_', '_', '_']\n",
+      "Enter guess: o\n",
       "You got a letter right!\n",
-      "['a', 'p', 'p', '_', '_', '_', 'a', '_', '_', '_']\n",
-      "Enter guess: l\n",
-      "You got a letter right!\n",
-      "['a', 'p', 'p', 'l', '_', '_', 'a', '_', '_', '_']\n",
-      "Enter guess: e\n",
-      "You got a letter right!\n",
-      "['a', 'p', 'p', 'l', 'e', '_', 'a', '_', '_', 'e']\n",
+      "['n', 'o', 'n', '_', '_', '_', '_', '_', '_', '_', '_']\n",
       "Enter guess: s\n",
       "You got a letter right!\n",
-      "['a', 'p', 'p', 'l', 'e', 's', 'a', '_', '_', 'e']\n",
-      "Enter guess: u\n",
+      "['n', 'o', 'n', 's', '_', '_', '_', '_', '_', '_', '_']\n",
+      "Enter guess: e\n",
       "You got a letter right!\n",
-      "['a', 'p', 'p', 'l', 'e', 's', 'a', 'u', '_', 'e']\n",
-      "Enter guess: c\n",
+      "['n', 'o', 'n', 's', 'e', '_', 'e', '_', '_', '_', '_']\n",
+      "Enter guess: v\n",
+      "You got a letter right!\n",
+      "['n', 'o', 'n', 's', 'e', 'v', 'e', '_', '_', '_', '_']\n",
+      "Enter guess: i\n",
+      "You got a letter right!\n",
+      "['n', 'o', 'n', 's', 'e', 'v', 'e', '_', 'i', '_', '_']\n",
+      "Enter guess: r\n",
+      "You got a letter right!\n",
+      "['n', 'o', 'n', 's', 'e', 'v', 'e', 'r', 'i', '_', '_']\n",
+      "Enter guess: t\n",
+      "You got a letter right!\n",
+      "['n', 'o', 'n', 's', 'e', 'v', 'e', 'r', 'i', 't', '_']\n",
+      "Enter guess: y\n",
       "You got a letter right!\n",
       "Good work! Would you like to play again?\n"
      ]
@@ -178,30 +194,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "25e3bde6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "empty separator",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4524/3154928884.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mstring\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'banana'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlist_str\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mstring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlist_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: empty separator"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
      ]
     }
    ],
    "source": [
-    "string = 'banana'\n"
+    "string = 'banana'\n",
+    "print(len(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "92549292",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zwitterionic\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "63edf572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79342"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "picked_word = 'applesauce'\n",
+    "guess_this_word = picked_word.lower()\n",
+    "mystery_word = '_ '*len(guess_this_word)\n",
+    "mystery_word = mystery_word.strip()\n",
+    "mystery_list = mystery_word.split()\n",
+    "print(mystery_list)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92549292",
+   "id": "73edc72c",
    "metadata": {},
    "outputs": [],
    "source": []
