Part 4 of exercise complete

--- a/connor-buxton-guessing.ipynb
+++ b/connor-buxton-guessing.ipynb
@@ -18,40 +18,17 @@
    "id": "dd76773b",
    "metadata": {},
    "source": [
-    "Word picking section - will be updated later"
+    "Import libraries for random numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 97,
    "id": "016d105b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nonseverity\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import random\n",
-    "f = open('words_alpha.txt','r')\n",
-    "x = 0\n",
-    "rand_num = random.randint(0, 370102)\n",
-    "while x <= rand_num:\n",
-    "    sample_line = f.readline()\n",
-    "    x = x + 1\n",
-    "\n",
-    "f.close()\n",
-    "\n",
-    "picked_word = sample_line.strip()\n",
-    "guess_this_word = picked_word.lower()\n",
-    "mystery_word = '_ '*len(guess_this_word)\n",
-    "mystery_word = mystery_word.strip()\n",
-    "mystery_list = mystery_word.split()\n",
-    "print(guess_this_word)"
+    "import random"
    ]
   },
   {
@@ -64,13 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 98,
    "id": "4a07a0c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def checkGuess(userGuess, numGuesses, correctGuesses, mystery_list):\n",
-    "    word_status = False\n",
     "    # First check if input is letter or word:\n",
     "    if len(userGuess) == 1:\n",
     "        # It's a letter\n",
@@ -84,12 +60,10 @@
     "            print('Sorry, that letter isn\\'t in there.')\n",
     "            numGuesses = numGuesses - 1\n",
     "    else:\n",
-    "        # It's a word... potentially. might need to add error checking\n",
+    "        # It's a word\n",
     "        if userGuess.lower() == guess_this_word:\n",
     "            print('You got the word right! You win!')\n",
     "            correctGuesses = len(guess_this_word)\n",
-    "            mystery_word = userGuess\n",
-    "            # to add: a gameStatus variable which is true when you win, will break loop\n",
     "        else:\n",
     "            print('Sorry, that word isn\\'t correct.')\n",
     "            numGuesses = numGuesses - 1\n",
@@ -99,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 99,
    "id": "1c6478c3",
    "metadata": {},
    "outputs": [],
@@ -128,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 100,
    "id": "e8da3d5c",
    "metadata": {},
    "outputs": [
@@ -136,130 +110,171 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['_', '_', '_', '_', '_', '_', '_', '_', '_', '_', '_']\n",
-      "Enter guess: n\n",
+      "_ _ _ _ _ _ _ _ _ _ _ _ _\n",
+      "Enter guess: 1\n",
+      "That is not a valid guess.\n",
+      "Enter guess: 2\n",
+      "That is not a valid guess.\n",
+      "Enter guess: 3\n",
+      "That is not a valid guess.\n",
+      "Enter guess: a\n",
       "You got a letter right!\n",
-      "['n', '_', 'n', '_', '_', '_', '_', '_', '_', '_', '_']\n",
-      "Enter guess: o\n",
-      "You got a letter right!\n",
-      "['n', 'o', 'n', '_', '_', '_', '_', '_', '_', '_', '_']\n",
-      "Enter guess: s\n",
-      "You got a letter right!\n",
-      "['n', 'o', 'n', 's', '_', '_', '_', '_', '_', '_', '_']\n",
+      "_ _ _ _ _ _ _ _ a _ _ _ _\n",
+      "Enter guess: aardvark\n",
+      "Sorry, that word isn't correct.\n",
+      "_ _ _ _ _ _ _ _ a _ _ _ _\n",
       "Enter guess: e\n",
       "You got a letter right!\n",
-      "['n', 'o', 'n', 's', 'e', '_', 'e', '_', '_', '_', '_']\n",
-      "Enter guess: v\n",
-      "You got a letter right!\n",
-      "['n', 'o', 'n', 's', 'e', 'v', 'e', '_', '_', '_', '_']\n",
+      "_ _ e _ _ _ _ _ a _ _ _ _\n",
       "Enter guess: i\n",
+      "Sorry, that letter isn't in there.\n",
+      "_ _ e _ _ _ _ _ a _ _ _ _\n",
+      "Enter guess: o\n",
       "You got a letter right!\n",
-      "['n', 'o', 'n', 's', 'e', 'v', 'e', '_', 'i', '_', '_']\n",
+      "_ _ e _ o _ o _ a _ o _ _\n",
+      "Enter guess: u\n",
+      "You got a letter right!\n",
+      "_ _ e _ o _ o _ a _ o u _\n",
       "Enter guess: r\n",
+      "Sorry, that letter isn't in there.\n",
+      "_ _ e _ o _ o _ a _ o u _\n",
+      "Enter guess: s\n",
       "You got a letter right!\n",
-      "['n', 'o', 'n', 's', 'e', 'v', 'e', 'r', 'i', '_', '_']\n",
+      "_ _ e _ o s o _ a _ o u s\n",
       "Enter guess: t\n",
       "You got a letter right!\n",
-      "['n', 'o', 'n', 's', 'e', 'v', 'e', 'r', 'i', 't', '_']\n",
-      "Enter guess: y\n",
+      "t _ e _ o s o _ a t o u s\n",
+      "Enter guess: h\n",
       "You got a letter right!\n",
-      "Good work! Would you like to play again?\n"
+      "t h e _ o s o _ a t o u s\n",
+      "Enter guess: h\n",
+      "You have already guessed this word or letter.\n",
+      "t h e _ o s o _ a t o u s\n",
+      "Enter guess: g\n",
+      "Sorry, that letter isn't in there.\n",
+      "t h e _ o s o _ a t o u s\n",
+      "Enter guess: c\n",
+      "You got a letter right!\n",
+      "t h e c o s o _ a t o u s\n",
+      "Enter guess: p\n",
+      "Sorry, that letter isn't in there.\n",
+      "t h e c o s o _ a t o u s\n",
+      "Enter guess: l\n",
+      "Sorry, that letter isn't in there.\n",
+      "t h e c o s o _ a t o u s\n",
+      "Enter guess: b\n",
+      "Sorry, that letter isn't in there.\n",
+      "Game over. You've won 0 games and lost 1 games. Would you like to play again? Y/NY\n",
+      "_ _ _ _ _ _ _ _ _\n",
+      "Enter guess: a\n",
+      "Sorry, that letter isn't in there.\n",
+      "_ _ _ _ _ _ _ _ _\n",
+      "Enter guess: e\n",
+      "You got a letter right!\n",
+      "_ _ _ e e _ _ _ _\n",
+      "Enter guess: o\n",
+      "Sorry, that letter isn't in there.\n",
+      "_ _ _ e e _ _ _ _\n",
+      "Enter guess: u\n",
+      "You got a letter right!\n",
+      "u _ _ e e _ _ _ _\n",
+      "Enter guess: v\n",
+      "Sorry, that letter isn't in there.\n",
+      "u _ _ e e _ _ _ _\n",
+      "Enter guess: b\n",
+      "Sorry, that letter isn't in there.\n",
+      "u _ _ e e _ _ _ _\n",
+      "Enter guess: c\n",
+      "Sorry, that letter isn't in there.\n",
+      "u _ _ e e _ _ _ _\n",
+      "Enter guess: r\n",
+      "Sorry, that letter isn't in there.\n",
+      "u _ _ e e _ _ _ _\n",
+      "Enter guess: s\n",
+      "Sorry, that letter isn't in there.\n",
+      "Game over. You've won 0 games and lost 2 games. Would you like to play again? Y/Nn\n"
      ]
     }
    ],
    "source": [
-    "gameStatus = False\n",
-    "numGuesses = 7\n",
-    "correctGuesses = 0\n",
-    "inputHistory = []\n",
-    "while not gameStatus and numGuesses > 0:\n",
-    "    print(mystery_list)\n",
-    "    userInput = input('Enter guess: ')\n",
-    "    \n",
-    "    if userInput.lower() in inputHistory:\n",
-    "        print(\"You have already guessed this word or letter.\")\n",
-    "    else:\n",
-    "        inputHistory.append(userInput.lower())\n",
-    "        numGuesses, correctGuesses, mystery_list = checkGuess(userInput, numGuesses, correctGuesses, mystery_list)\n",
+    "# Set initial state for variables that track progress\n",
+    "continueStatus = True\n",
+    "gamesWon = 0\n",
+    "gamesLost = 0\n",
+    "storeNum = []\n",
     "\n",
-    "    if correctGuesses == len(guess_this_word):\n",
-    "        gameStatus = True\n",
-    "        \n",
+    "# Main loop body, unless user inputs 'n' when prompted, they will continue to play\n",
+    "while continueStatus:\n",
+    "    goodNum = False\n",
+    "    # make sure we aren't repeating words\n",
+    "    while not goodNum:\n",
+    "        # open file, produce random number\n",
+    "        x = 0\n",
+    "        rand_num = random.randint(0, 370102)\n",
+    "        if rand_num not in storeNum:\n",
+    "            f = open('words_alpha.txt','r')\n",
+    "            storeNum.append(rand_num)\n",
+    "            while x <= rand_num:\n",
+    "                sample_line = f.readline()\n",
+    "                x = x + 1\n",
+    "            f.close()\n",
+    "            goodNum = True\n",
+    "            \n",
+    "    # pick the word, turn it into the blank version to use in the game\n",
+    "    picked_word = sample_line.strip()\n",
+    "    guess_this_word = picked_word.lower()\n",
+    "    mystery_word = '_ '*len(guess_this_word)\n",
+    "    mystery_word = mystery_word.strip()\n",
+    "    mystery_list = mystery_word.split()\n",
     "    \n",
-    "if gameStatus:\n",
-    "    print('Good work! Would you like to play again?')\n",
-    "else:\n",
-    "    print('Game over. Would you like to play again?')"
+    "    # print(guess_this_word)\n",
+    "    \n",
+    "    gameStatus = False\n",
+    "    numGuesses = 7\n",
+    "    correctGuesses = 0\n",
+    "    inputHistory = []\n",
+    "    \n",
+    "    # While we still have guesses and the game has not yet been won\n",
+    "    while not gameStatus and numGuesses > 0:\n",
+    "        # Display word\n",
+    "        displayList = ' '.join(mystery_list)\n",
+    "        print(displayList)\n",
+    "        \n",
+    "        goodInput = False\n",
+    "        # prompt user for guess\n",
+    "        while not goodInput:\n",
+    "            userInput = input('Enter guess: ')\n",
+    "            if userInput.isalpha():\n",
+    "                goodInput = True\n",
+    "            else:\n",
+    "                print('That is not a valid guess.')\n",
+    "            \n",
+    "        \n",
+    "        # already guessed? then discard that guess\n",
+    "        if userInput.lower() in inputHistory:\n",
+    "            print(\"You have already guessed this word or letter.\")\n",
+    "        # if not already guessed, run the check function\n",
+    "        else:\n",
+    "            inputHistory.append(userInput.lower())\n",
+    "            numGuesses, correctGuesses, mystery_list = checkGuess(userInput, numGuesses, correctGuesses, mystery_list)\n",
+    "        # if we guessed all the letters or the whole word, update gameStatus to true\n",
+    "        if correctGuesses == len(guess_this_word):\n",
+    "            gameStatus = True\n",
+    "\n",
+    "    # This condition shows we have won\n",
+    "    if gameStatus:\n",
+    "        gamesWon = gamesWon + 1\n",
+    "        continueInput = input('Good work! You\\'ve won ' + str(gamesWon) + ' games and lost ' + str(gamesLost) + ' games. Would you like to play again? Y/N')\n",
+    "    # This condition indicates a loss\n",
+    "    else:\n",
+    "        gamesLost = gamesLost + 1\n",
+    "        continueInput = input('Game over. You\\'ve won ' + str(gamesWon) + ' games and lost ' + str(gamesLost) + ' games. Would you like to play again? Y/N')\n",
+    "        \n",
+    "    if continueInput.lower() == 'n':\n",
+    "        continueStatus = False\n",
+    "    else:\n",
+    "        continueStatus = True"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "25e3bde6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "string = 'banana'\n",
-    "print(len(string))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "92549292",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "zwitterionic\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "63edf572",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "79342"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "picked_word = 'applesauce'\n",
-    "guess_this_word = picked_word.lower()\n",
-    "mystery_word = '_ '*len(guess_this_word)\n",
-    "mystery_word = mystery_word.strip()\n",
-    "mystery_list = mystery_word.split()\n",
-    "print(mystery_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73edc72c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
